chore: delete styles step 3

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# server/public/styles
-# server/public/scripts
+server/public/styles
+server/public/scripts
 server/public/assets/upload/*
 .idea/
 .DS_Store
